разделен список чатов и пользователь
