# webapi/docs/swagger.json
@@ -199,6 +199,37 @@
                     }
                 }
             }
+        },
+        "/user/:username": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "get user by username",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -248,8 +279,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "lastMessage": {
-                    "$ref": "#/definitions/models.Message"
+                "messages": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Message"
+                    }
                 },
                 "name": {
                     "type": "string",
@@ -361,12 +395,6 @@
                 "bio": {
                     "type": "string",
                     "example": "What are you taking about?"
-                },
-                "chats": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Chat"
-                    }
                 },
                 "createdAt": {
                     "type": "string",
